--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "prod": "webpack --config webpack.config.prod.js -p",
+    "dev": "webpack-dev-server --config webpack.config.dev.js",
+    "dev:node": "webpack --config webpack.config.node.js"
   },
   "author": "Rehan",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.0",
-    "jwt-decode": "^2.2.0",
-    "sequelize": "^4.43.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -47,6 +45,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^4.43.0",
     "validator": "^10.3.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4"
