--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "popper": "^1.0.1",
